--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
         networks:
             - clarusnet
         configs:
-            source: initialdatabase
-            target: /docker-entrypoint-initdb.d/init.sql
+            - source: initialdatabase
+              target: /docker-entrypoint-initdb.d/init.sql
     
     app-server:
         image: 046402772087.dkr.ecr.us-east-1.amazonaws.com/clarusway-repo/phonebook-app:latest
